--- a/vignettes/articles/algorithm_auditing.Rmd
+++ b/vignettes/articles/algorithm_auditing.Rmd
@@ -1,19 +1,14 @@
 ---
 title: "Algorithm auditing: Get started"
 author: Koen Derks
-date: "`r Sys.Date()`"
 output: 
-  rmarkdown::html_vignette:
+  html_document:
     toc: true
     toc_depth: 3
 bibliography: references.bib
 csl: apa.csl
 vignette: >
-  %\VignetteIndexEntry{Algorithm auditing: Get started}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteDepends{jfa}
-  %\VignetteKeywords{algorithm, audit, bias, fairness, model, performance}
-  %\VignettePackage{jfa}
   %\VignetteEncoding{UTF-8}
 nocite: |
   @kozodoi_2021
