--- a/vignettes/articles/creating_prior.Rmd
+++ b/vignettes/articles/creating_prior.Rmd
@@ -1,19 +1,14 @@
 ---
-title: 'Creating a prior distribution for audit sampling'
+title: Creating a prior distribution for audit sampling
 author: Koen Derks
-date: "`r Sys.Date()`"
 output: 
-  rmarkdown::html_vignette:
+  html_document:
     toc: true
     toc_depth: 3
 bibliography: references.bib
 csl: apa.csl
 vignette: >
-  %\VignetteIndexEntry{Creating prior distributions}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteDepends{jfa}
-  %\VignetteKeywords{audit, evaluation, planning, prior}
-  %\VignettePackage{jfa}
   %\VignetteEncoding{UTF-8}
 ---
 
