--- a/vignettes/articles/data_auditing.Rmd
+++ b/vignettes/articles/data_auditing.Rmd
@@ -1,19 +1,14 @@
 ---
 title: "Data auditing: Get started"
 author: Koen Derks
-date: "`r Sys.Date()`"
 output: 
-  rmarkdown::html_vignette:
+  html_document:
     toc: true
     toc_depth: 3
 bibliography: references.bib
 csl: apa.csl
 vignette: >
-  %\VignetteIndexEntry{Data auditing: Get started}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteDepends{jfa}
-  %\VignetteKeywords{digit, tests, Bayesian}
-  %\VignettePackage{jfa}
   %\VignetteEncoding{UTF-8}
 nocite: |
   @cinelli_2018, @joenssen_2015, @stephane_2020
