--- a/vignettes/articles/digit_analysis.Rmd
+++ b/vignettes/articles/digit_analysis.Rmd
@@ -1,19 +1,14 @@
 ---
-title: "Digit analysis"
+title: Digit analysis
 author: Koen Derks
-date: "`r Sys.Date()`"
 output: 
-  rmarkdown::html_vignette:
+  html_document:
     toc: true
     toc_depth: 3
 bibliography: references.bib
 csl: apa.csl
 vignette: >
-  %\VignetteIndexEntry{Digit analysis}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteDepends{jfa}
-  %\VignetteKeywords{digit, tests, Bayesian}
-  %\VignettePackage{jfa}
   %\VignetteEncoding{UTF-8}
 ---
 
