--- a/vignettes/articles/model_fairness.Rmd
+++ b/vignettes/articles/model_fairness.Rmd
@@ -1,19 +1,14 @@
 ---
-title: "Algorithmic fairness"
+title: Algorithmic fairness
 author: Koen Derks
-date: "`r Sys.Date()`"
 output: 
-  rmarkdown::html_vignette:
+  html_document:
     toc: true
     toc_depth: 3
 bibliography: references.bib
 csl: apa.csl
 vignette: >
-  %\VignetteIndexEntry{Algorithmic fairness}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteDepends{jfa}
-  %\VignetteKeywords{algorithm, audit, bias, fairness, model, performance}
-  %\VignettePackage{jfa}
   %\VignetteEncoding{UTF-8}
 ---
 
