--- a/vignettes/articles/sample_evaluation.Rmd
+++ b/vignettes/articles/sample_evaluation.Rmd
@@ -1,19 +1,14 @@
 ---
-title: "Evaluating statistical audit samples"
+title: Evaluating statistical audit samples
 author: Koen Derks
-date: "`r Sys.Date()`"
 output: 
-  rmarkdown::html_vignette:
+  html_document:
     toc: true
     toc_depth: 3
 bibliography: references.bib
 csl: apa.csl
 vignette: >
-  %\VignetteIndexEntry{Evaluating statistical audit samples}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteDepends{jfa}
-  %\VignetteKeywords{audit, evaluation, jfa, planning, prior}
-  %\VignettePackage{jfa}
   %\VignetteEncoding{UTF-8}
 ---
 
