--- a/vignettes/articles/sample_planning.Rmd
+++ b/vignettes/articles/sample_planning.Rmd
@@ -1,19 +1,14 @@
 ---
-title: 'Planning statistical audit samples'
+title: Planning statistical audit samples
 author: Koen Derks
-date: "`r Sys.Date()`"
 output: 
-  rmarkdown::html_vignette:
+  html_document:
     toc: true
     toc_depth: 3
 bibliography: references.bib
 csl: apa.csl
 vignette: >
-  %\VignetteIndexEntry{Planning statistical audit samples}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteDepends{jfa}
-  %\VignetteKeywords{audit, likelihood, sampling, planning}
-  %\VignettePackage{jfa}
   %\VignetteEncoding{UTF-8}
 ---
 
