--- a/vignettes/articles/sample_selection.Rmd
+++ b/vignettes/articles/sample_selection.Rmd
@@ -1,19 +1,14 @@
 ---
-title: 'Selecting statistical audit samples'
+title: Selecting statistical audit samples
 author: Koen Derks
-date: "`r Sys.Date()`"
 output: 
-  rmarkdown::html_vignette:
+  html_document:
     toc: true
     toc_depth: 3
 bibliography: references.bib
 csl: apa.csl
 vignette: >
-  %\VignetteIndexEntry{Selecting statistical audit samples}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteDepends{jfa}
-  %\VignetteKeywords{algorithm, audit, method, sampling, selection}
-  %\VignettePackage{jfa}
   %\VignetteEncoding{UTF-8}
 ---
 
