--- a/vignettes/articles/references.bib
+++ b/vignettes/articles/references.bib
@@ -163,8 +163,8 @@
 @article{derks_2021b,
   title={The {B}ayesian Approach to Audit Evidence: Quantifying Statistical Evidence using the Bayes Factor},
   author={Derks, Koen and de Swart, Jacques and Wagenmakers, Eric-Jan and Wetzels, Ruud},
-  journal={PsyArXiv},
-  year={2021},
+  journal={Auditing: A Journal of Practice \& Theory},
+  year={2024},
   doi={10.31234/osf.io/kzqp5}
 }
 @article{derks_2022,
